--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
-.placeholder {
-    background-color: cornflowerblue;
+.header {
+    display : flex;
+    justify-content: space-between;
+    padding: 38px;
+}
+
+.venstre{
+    display: flex
+}
+
+.header > .venstre > div {
+    margin-right: 20px;
 }
