--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/*Master styles*/
 body {
     margin: 0px;
 }
@@ -7,6 +8,7 @@ body {
     grid-template-columns: 1fr;
 }
 
+/*Nav styles*/
 .nav-wrapper {
     display : flex;
     justify-content: space-between;
@@ -41,4 +43,23 @@ body {
 
 .nav-link-wrapper a:hover{
     color: black;
+}
+
+/* Portfolio styles */
+
+.portfolio-items-wrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.portfolio-item.wrapper {
+    position: relative;
+}
+
+.portfolio-img-background {
+    height: 500px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
